@@ -2,13 +2,14 @@
 Hash: SHA256
 
 DIST metric_fu-2.1.1.gem 110592 RMD160 891866def4fdae1987bbb496031dd6b7d2bc0310 SHA1 1d8957bdd81c88a872962f6a470dcc3b3e3e2793 SHA256 6691963e9c65ef3b7a97fb87332b3dbca3cc402f0e2b12658a8af3dfadc91551
+EBUILD metric_fu-2.1.1-r1.ebuild 1167 RMD160 3fa56e0523190d1d86a3ce2bb71e292039dc5455 SHA1 9bcf14acb9a78bf827389e6a85e3925c6d1a8d95 SHA256 7d20d40bda6843ae98964e79cc1434e4ab26f04fac3cb9c33884c67a62bfad72
 EBUILD metric_fu-2.1.1.ebuild 1319 RMD160 e13fd7bb4b793fbdd236b2c9ad94f5a8c20bc3ca SHA1 4c1fbc594c52fa1418ec640e2406b714c2431e37 SHA256 d54f9f862790acb6a6da6f8c687920a2acb0deea02c8846bc3e566e5b0e72a87
-MISC ChangeLog 1617 RMD160 8cfecf7e8bd1bba77e922496d906c07f4bda28b0 SHA1 baab57d2db89740e1b6c9180819aa7c44db82d20 SHA256 d2f3043b7d187453b4dec904dc9bdf2e9534a3802eb86cda88a75f7d8986a0e7
+MISC ChangeLog 1808 RMD160 6a9db741346e6b51b908e08ac4d87c3306b98399 SHA1 ee61e3e5ae1d7869f48eaa804137ab2cd9b3d830 SHA256 66d0402455d89c6e4971d161c5395b5706be600bb0952430512a178e5474fd2e
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk33QE8ACgkQrnu0mw69JkpSSAD/QP+EbpXw9V1kZ1HXUQDW2LNY
-xLnAHYkDLEspfOYFMXYA/iGu7JCqXWSDXAfxBPG0KLWpwt8aZVHJJhjjGFbrIvEH
-=TGBa
+iF4EAREIAAYFAk6Jqq4ACgkQiIP6VqMIqNefVAEAkSBCB/rgpl4ahKclENDnWT76
+guFS+F1PeTBeKfVkPUAA/izcJRkxSf/11ThwCkiGl0zfBpND/o/zxYirLJVcgSSP
+=t2q9
 -----END PGP SIGNATURE-----
