@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*metric_fu-2.1.1-r1 (03 Oct 2011)
+
+  03 Oct 2011; Hans de Graaff <graaff@gentoo.org> +metric_fu-2.1.1-r1.ebuild:
+  Use upstream metadata again because this is now a requirement via bundler.
+
   14 Jun 2011; Hans de Graaff <graaff@gentoo.org> -metric_fu-1.5.1.ebuild:
   Remove old version.
 
